C/DEV3 - C/interros/cours/annees_precedentes/exam-2017-08-23/code15_results.txt
Résultat de la compilation: 
In file included from code15_B.cpp:4:0,
                 from code15.cpp:2:
code15_A.cpp:8:5: error: ‘B’ does not name a type
     B b;
     ^
code15.cpp: In function ‘int main()’:
code15.cpp:10:7: error: ‘class A’ has no member named ‘b’
     a.b = b;
       ^
(ERREUR: la compilation a échouée!)
